- Fixed a bug with the API in the FT after the refactor - Fixed a CSS overflow issue with safecracker

--- a/themes/gmap/css/gmap.css
+++ b/themes/gmap/css/gmap.css
@@ -5,8 +5,8 @@
  * @author		Objective HTML
  * @copyright	Copyright (c) 2012, Justin Kimbrell
  * @link 		http://www.objectivehtml.com/google-maps
- * @version		3.0.195
- * @build		20121009
+ * @version		3.1.0
+ * @build		20121201
  */
  
 .group:after {
@@ -49,6 +49,8 @@
 .gmap-wrapper {
 	position: relative;
 	}
+	
+	.gmap-wrapper img { max-width: none; }
 	
 	.gmap-wrapper button {
 		color: rgb(29, 32, 34);
@@ -281,6 +283,7 @@ background: linear-gradient(top, rgba(127,127,127,1) 0%,rgba(56,56,56,1) 50%,rgb
 	.gmap-wrapper .map.column {
 		width: 75%;
 		z-index: 500;
+		padding: 0;
 		}
 		
 		.gmap-wrapper .gmap-popup-window {
